# Y24_Common_Training_Assignments

./: LICENSE  Linux Bandit.docx  README.md
Aarzoo/CV assignment/: code
Aarzoo/ROS assignment/: listener.py  talker.py
Aarzoo/ROS assignment/src/ros2_talker_listener/: package.xml  setup.cfg  setup.py
Aarzoo/ROS assignment/src/ros2_talker_listener/launch/: talker_listener_launch.py
Arnav Gupta/CAD/: README.md
Arnav Gupta/CV/: ASCII_output.txt  CV_Assignment.ipynb  README.md  braille_art_output.txt
Arnav Gupta/Linux/: README.md
Arnav Gupta/ROS2/: README.md
Ayush Muttepawar/CV/: CV.ipynb  readme.md
Ayush Muttepawar/Fusion/: AyushMuttepawar_Part_1.step  AyushMuttepawar_Part_2.step  readme.md
Dhruv Kejriwal/: Bandit.md  braille_output.txt  firstCV.py
Harikrishna_S_240424/Bash/: readme.md
Harikrishna_S_240424/CV/: braille_art_240424.ipynb
Harikrishna_S_240424/Shells/: readme.md
Harsha_240632/: braille_art.txt  cv.py
ISHWIN KUMAR/Bandit/: (Ishwin Kumar) Level 0-12.docx  Readme.md
ISHWIN KUMAR/CAD/: LINEAR EXTRUSION (ISHWIN KUMAR) v1.step  REVOLVING EXTRUSION (ISHWIN KUMAR) v1.step  Readme.md
ISHWIN KUMAR/Computer Vision/: Ishwin Kumar_ Braille art.py  Readme.md  output_braille_art.txt
ISHWIN KUMAR/ROS/: Launch files for talker, listener with parameters.py  Listener code.py  Readme.md  Talker code.py
Ira Srivastava/Bandit/: README.md
Ira Srivastava/CV/: output.txt  test.py
Ira Srivastava/ROS/: README.md
Priyanshu/: README.md
Priyanshu/CV/: README.md  (+2 more)
Rudresh/: Untitled document.docx  assingment shell.docx
hamza_240644/: README.md
(+208 files in other folders)
